--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   </ol>
   <hr />
   <h3>Contact Me</h3>
-  <a href="C:\Users\TANUJA\OneDrive\Desktop\Web development\Html-Personal Site\Contact Me.html">My Details</a>
+  <a href="Contact Me">My Details</a>
 </body>
 
 </html>
