--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing=20>
     <tr>
       <td>
-      <img src="Mamatha+Bhukya.jpg" alt="Vanaja's profile photo">
+      <img src="Mamatha+Bhukya.jpg" alt="Vanaja's profile photo" width="150" height="150">
     </td>
     <td>
       <h1>Vanaja</h1>
